force-app/main/default/objects/QEM_Action__c/fields/QEM_Description__c.field-meta.xml
<CustomField>
    <fullName>QEM_Description__c</fullName>
    <label>QEM_Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>