force-app/main/default/objects/QEM_Action__c/fields/QEM_OOX__c.field-meta.xml
<CustomField>
    <fullName>QEM_OOX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QEM_OOX</label>
    <referenceTo>QEM_OOX__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>