force-app/main/default/objects/QEM_Action__c/fields/QEM_Quality_Event__c.field-meta.xml
<CustomField>
    <fullName>QEM_Quality_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QEM_Quality_Event</label>
    <referenceTo>QEM_Deviation__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>